# file_auto_expiry

./: .gitignore  README.md  file_expiry.py  file_expiry.sh  pyproject.toml  setup.py
.github/workflows/: unit_tests.yml
infra_file_auto_expiry/source/: main.py  utils.py
infra_file_auto_expiry/source/data/: expiry_constants.py
infra_file_auto_expiry/source/tests/: test_utils.py
infra_file_auto_expiry/source/utils/: expiry_checks.py  file_creator.py  interface.py
infra_file_auto_expiry/tests/: test_file_expiry.py  test_utils.py
source/: main.py
source/data/: expiry_constants.py
source/tests/: test_utils.py
source/utils/: expiry_checks.py  interface.py
src/file_auto_expiry/: main.py
src/file_auto_expiry/data/: tuples.py
src/file_auto_expiry/utils/: expiry_checks.py  file_creator.py  interface.py
